keyboard and click updates input field

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <container class="game-container">
+        <!-- <container class="game-container">
             <container class="guess-container">
                 <div class="letter"></div>
                 <div class="letter"></div>
@@ -59,7 +59,8 @@
                 <div class="letter"></div>
                 <div class="letter"></div>
             </container>
-        </container>
+        </container> -->
+        <input type="text" class="input">
         <container class="board-container">
             <container class="board-row-container"><button class="key">Q</button><button class="key">W</button><button class="key">E</button><button class="key">R</button><button class="key">T</button><button class="key">Y</button><button class="key">U</button><button class="key">I</button><button class="key">O</button><button class="key">P</button></container>
             <container class="board-row-container"></button><button class="key">A</button><button class="key">S</button><button class="key">D</button><button class="key">F</button><button class="key">G</button><button class="key">H</button><button class="key">J</button><button class="key">K</button><button class="key">L</button></container>
