text input removed, functions update divs

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         <header><h1>Worldle</h1></header>
         <container class="square-container">
         <container class="guess-container">
-            <div class="letter">Q</div>
-            <div class="letter"></div>
-            <div class="letter"></div>
-            <div class="letter"></div>
-            <div class="letter"></div>
+            <div id="letter1" class="letter"></div>
+            <div id="letter2" class="letter"></div>
+            <div id="letter3" class="letter"></div>
+            <div id="letter4" class="letter"></div>
+            <div id="letter5" class="letter"></div>
         </container>
         <container class="guess-container">
             <div class="letter"></div>
@@ -60,11 +60,10 @@
             <div class="letter"></div>
         </container>
         </container>
-        <input type="text" class="input">
         <container class="board-container">
             <container class="board-row-container"><button class="key">Q</button><button class="key">W</button><button class="key">E</button><button class="key">R</button><button class="key">T</button><button class="key">Y</button><button class="key">U</button><button class="key">I</button><button class="key">O</button><button class="key">P</button></container>
             <container class="board-row-container"></button><button class="key">A</button><button class="key">S</button><button class="key">D</button><button class="key">F</button><button class="key">G</button><button class="key">H</button><button class="key">J</button><button class="key">K</button><button class="key">L</button></container>
-            <container class="board-row-container"><button class="key key__big enter">ENTER</button><button class="key ">Z</button><button class="key">X</button><button class="key">C</button><button class="key">V</button><button class="key">B</button><button class="key">N</button><button class="key">M</button><button class="key key__big backspace"><span class="material-symbols-outlined">
+            <container class="board-row-container"><button class="key key__big enter">ENTER</button><button class="key ">Z</button><button class="key">X</button><button class="key">C</button><button class="key">V</button><button class="key">B</button><button class="key">N</button><button class="key">M</button><button id='backspace'class="key key__big backspace"><span class="material-symbols-outlined">
                 backspace
                 </span></button></container>
         </container>
